@@ -1,3 +1,7 @@
+02 May 2007
+   [Alexey]
+   - New KVS functions: $serialize and $unserialize to deal with JSON-serialized strings
+   
 16 Apr 2007
    [Noldor] (with the input from Pragma and Iakko)
    - Iakko's notifier is back. New in this version:
